syntax = "proto3";

package tasks;

option go_package = "github.com/seoyhaein/golang-study/protos/tasks";

// 일단은 script 만을 전송하는 방식만 먼저 생각하자.
// wrappers.proto 는 일단 다음에 생각하자.
// TaskStatus 등도 일단 다음에 생각하자.

message InputMessage {
  string scripts = 1;
}

// output 나오는 형태를 생각해봐야 함.
message OutputMessage {
  string output = 1;
}

// Helloworld 랑 비슷하지만 일단 script 를 보내서 동장하는지 부터 확인하자.
service TaskManager {
  rpc SendMessage(InputMessage) returns (OutputMessage);
}